# plover_modal_dictionary

./: README.md  setup.cfg
plover_modal_dictionary/: __init__.py  dictionary.py  extension.py
